# estat

./: .gitignore  Makefile  README.md
estat/: Cargo.toml
estat-py/: Cargo.toml  pyproject.toml
estat-py/python/estat_py/: __init__.py  estat_py.pyi
estat-py/src/: lib.rs
estat-py/tests/: test_client.py  test_integration.py
estat/src/: lib.rs
estat/tests/: integration_test.rs  unit_test.rs
