[package]
name = "estat-py"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]
name = "estat_py"

[dependencies]
pyo3 = { version = "0.25.1", features = ["extension-module"] }
serde_json = "1.0.140"
estat = { path = "../estat" }
pythonize = "0.25.0"

[package.metadata.maturin]
python-source = "src"
